Fix some layout issues for Image Editor in small windows

--- a/components/com_jce/editor/libraries/css/src/override.css
+++ b/components/com_jce/editor/libraries/css/src/override.css
@@ -28,8 +28,20 @@ label {
     position: relative;
 }
 
-.uk-grid-small > div {
+.uk-grid-small>div {
     padding-left: 10px;
+}
+
+.uk-grid-mini {
+    margin-left: -10px;
+}
+
+.uk-grid-mini>* {
+    padding-left: 5px;
+}
+
+.uk-grid-mini>div {
+    padding-left: 5px;
 }
 
 [class*="uk-icon-"] {
@@ -101,7 +113,10 @@ label {
     max-height: 100%;
 }
 
-.uk-modal-prompt, .uk-modal-confirm {width: 350px;}
+.uk-modal-prompt,
+.uk-modal-confirm {
+    width: 350px;
+}
 
 
 /*.uk-modal-preview {
@@ -161,7 +176,7 @@ label {
     height: auto;
 }
 
-.uk-modal-dialog > .uk-close:first-child {
+.uk-modal-dialog>.uk-close:first-child {
     margin: 0;
     position: absolute;
     right: 5px;
@@ -179,7 +194,7 @@ label {
     padding: 30px 0 20px 0;
 }
 
-.uk-modal-header + .uk-modal-body {
+.uk-modal-header+.uk-modal-body {
     padding: 10px 0
 }
 
@@ -243,11 +258,11 @@ label {
     padding: 10px;
 }
 
-.uk-switcher > * {
+.uk-switcher>* {
     display: none;
 }
 
-.uk-switcher > .uk-active {
+.uk-switcher>.uk-active {
     display: block;
 }
 
@@ -315,21 +330,21 @@ label {
     padding-top: 0;
 }
 
-.uk-form-row + .uk-form-row {
+.uk-form-row+.uk-form-row {
     margin-top: 0.5em;
 }
 
-.uk-form-icon-both > input {
+.uk-form-icon-both>input {
     padding: 0 2em !important;
 }
 
-.uk-form-icon > [class*="uk-icon-"] {
+.uk-form-icon>[class*="uk-icon-"] {
     width: 2em;
     font-size: 14px;
 }
 
-.uk-form-icon-flip > [class*="uk-icon-"],
-.uk-form-icon-both > [class*="uk-icon-"]:last-child {
+.uk-form-icon-flip>[class*="uk-icon-"],
+.uk-form-icon-both>[class*="uk-icon-"]:last-child {
     display: block;
     cursor: pointer;
     pointer-events: inherit;
@@ -341,7 +356,7 @@ label {
     top: 0.5em;
 }
 
-.uk-form-icon-both > [class*="uk-icon-"]:first-child {
+.uk-form-icon-both>[class*="uk-icon-"]:first-child {
     left: inherit;
     right: inherit;
 }
@@ -355,20 +370,20 @@ label {
   left: 5px;
 }*/
 
-.uk-form-icon-flip .uk-icon + .uk-icon {
+.uk-form-icon-flip .uk-icon+.uk-icon {
     right: 30px;
 }
 
-.uk-form-icon-flip .uk-icon + .uk-icon + .uk-icon {
+.uk-form-icon-flip .uk-icon+.uk-icon+.uk-icon {
     right: 60px;
 }
 
-.uk-form-icon-flip > input {
+.uk-form-icon-flip>input {
     padding-right: 26px !important;
 }
 
-.uk-form-icon-flip > [class*="uk-icon-colorpicker"],
-.uk-form-icon-both > [class*="uk-icon-colorpicker"]:last-child {
+.uk-form-icon-flip>[class*="uk-icon-colorpicker"],
+.uk-form-icon-both>[class*="uk-icon-colorpicker"]:last-child {
     background-color: #fff;
     width: 1.5em;
     height: 1.5em;
@@ -453,7 +468,7 @@ input[type="range"]::-ms-thumb {
     cursor: pointer;
 }
 
-.uk-grid > .uk-width-1-4 {
+.uk-grid>.uk-width-1-4 {
     padding-left: 10px;
 }
 
@@ -464,6 +479,19 @@ input[type="range"]::-ms-thumb {
 .uk-width-0-6,
 .uk-width-0-10 {
     width: auto;
+}
+
+
+/* fix layout in upload dialog */
+
+@media (min-width: 960px) {
+    .uk-form-horizontal .uk-width-2-10,
+    .uk-form-horizontal .uk-width-1-5 {
+        width: 20%;
+    }
+    .uk-form-horizontal .uk-form-controls {
+        margin-left: inherit;
+    }
 }
 
 @media (max-width: 375px) {
@@ -621,4 +649,15 @@ input[type="range"]::-ms-thumb {
     left: 0;
     width: 100%;
     text-align: center;
+}
+
+.uk-inline-help .uk-modal-dialog {
+    height: 100%;
+    top: 0;
+}
+
+.uk-inline-help .uk-modal-dialog iframe {
+    width: 100%;
+    height: 93%;
+    height: calc(100% - 41px);
 }
